--- a/ondeestamos.html
+++ b/ondeestamos.html
@@ -117,10 +117,10 @@
             <div class="footer_informacoes">
                 <b>Contato</b>
                 <br><br>
-                <b>Endereço: </b>Rua X, Endereço Y, AversaZ,<br>
-                Cidade UF 72000-000
+                <b>Endereço: </b>Avenida Serafim Gonçalves Pereira, 622, Parque Novo Mundo<br>
+                São Paulo - SP 02179-000
                 <br><br>
-                <b>Telefone: </b>(61)33333-3333
+                <b>Telefone: </b>(11)98765-4321
                 <br><br>
                 <b>E-mail: </b>contato@oticaseli.com.br
             </div>
