Colocar os links para as paginas de Termos de uso e Politica de privacidade no rodapé

--- a/faleconosco.html
+++ b/faleconosco.html
@@ -173,7 +173,7 @@
             
             <section class="TermosPolitica">
                 <p>
-                    Todos os direitos reservados &copy; 2020.<a href="#">Termos de uso </a>e <a href="#">Política de privacidade.</a>
+                    Todos os direitos reservados &copy; 2020.<a href="termosdeuso.html">Termos de uso </a>e <a href="politicadeprivacidade.html">Política de privacidade.</a>
                 </p>
             </section>
         </footer>
