--- a/produtosemarcas.html
+++ b/produtosemarcas.html
@@ -39,7 +39,16 @@
                     <h1>PRODUTOS E MARCAS ÓTICAS ELI</h1>
                 </div>
 
+                <!--Sessão: Linha Masculina-->
+
+                <p style="text-align: center; font-family:trebuchet MS; font-size:30px;">LINHA MASCULINA</p>
+
                 <div class="linha_masculina">
+                    <div class="conj_linha_masc">
+
+                        <div class="simbolo-maior">
+                            <img src="img/less-than-simbolo.png" width="30" height="60">
+                        </div>
 
                     <div class="oculos-masculino">
                         <img src="img/produtos-e-marcas/linha-masculina-oakley-pitchman-R-Carbon-OX8149-0150-Satin-Black.jpg" height="250" width="250px"/>
@@ -50,8 +59,8 @@
 
                     <div class="oculos-masculino">
                         <img src="img/produtos-e-marcas/linha-masculina-oculos-de-leitura-normaii-saka-wood.jpg" height="250" width="250px"/>
-                        <p style="text-align: center;">Oculos de leitura Normaii Osaka</p> 
-                        <p style="text-align: center; font-size: 25px;">R$ 155,00</p>
+                        <p style="text-align: center;">Lacoste - Preto fosco</p> 
+                        <p style="text-align: center; font-size: 25px;">R$ 295,00</p>
                         <button>COMPRAR</button>
                     </div>
                     
@@ -61,11 +70,63 @@
                         <p style="text-align: center; font-size: 25px;">R$ 127,00</p>
                         <button>COMPRAR</button>
                     </div>
+
+                    <div class="oculos-masculino">
+                        <img src="img/produtos-e-marcas/linha-masculina-tommy-hillfiger-preto.jpg" height="250" width="250px"/>
+                        <p style="text-align: center;">Tommy Hilfiger Preto</p> 
+                        <p style="text-align: center; font-size: 25px;">R$ 270,00</p>
+                        <button>COMPRAR</button>
+                    </div>
+
+                    <div class="simbolo-menor">
+                        <img src="img/greater-than-symbol.png" width="30" height="60">
+                    </div>
+
+                    </div>
+
                 </div>
 
                 <div class="linha_feminina">
 
-                    PRODUTOS
+                    <div class="conj_linha_masc">
+
+                        <div class="simbolo-maior">
+                            <img src="img/less-than-simbolo.png" width="30" height="60">
+                        </div>
+
+                    <div class="oculos-masculino">
+                        <img src="img/produtos-e-marcas/linha-feminina-ray-ban-gatinho-nina.JPG" height="250" width="250px"/>
+                        <p style="text-align: center;">Ray-Ban Gatinho Nina</p> 
+                        <p style="text-align: center; font-size: 25px;">R$ 100,00</p>
+                        <button>COMPRAR</button>
+                    </div>
+
+                    <div class="oculos-masculino">
+                        <img src="img/produtos-e-marcas/linha-feminina-vogue-vermelho.jpg" height="250" width="250px"/>
+                        <p style="text-align: center;">Vogue Vermelho</p> 
+                        <p style="text-align: center; font-size: 25px;">R$ 95,00</p>
+                        <button>COMPRAR</button>
+                    </div>
+                    
+                    <div class="oculos-masculino">
+                        <img src="img/produtos-e-marcas/linha-feminina-armani-exchange-azul.jpg" height="250" width="250px"/>
+                        <p style="text-align: center;">Armani Exchange Azul Translúcido</p> 
+                        <p style="text-align: center; font-size: 25px;">R$ 320,00</p>
+                        <button>COMPRAR</button>
+                    </div>
+
+                    <div class="oculos-masculino">
+                        <img src="img/produtos-e-marcas/linha-masculina-tommy-hillfiger-preto.jpg" height="250" width="250px"/>
+                        <p style="text-align: center;">Tommy Hilfiger Preto</p> 
+                        <p style="text-align: center; font-size: 25px;">R$ 270,00</p>
+                        <button>COMPRAR</button>
+                    </div>
+
+                    <div class="simbolo-menor">
+                        <img src="img/greater-than-symbol.png" width="30" height="60">
+                    </div>
+
+                    </div>
 
                 </div>
             </section>
