Mudar fonte e linkar a página Produtos e Marcas em todos os rodapés

--- a/paginainicial.html
+++ b/paginainicial.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
          <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" type="text/css" href="css/style2.css"/>
+        <link rel="stylesheet" type="text/css" href="css/paginainicial.css"/>
     </head>
     <body>
         <!-- SESSÃO DE CABEÇALHO -->
@@ -20,9 +20,9 @@
                 
                 
                 <nav>
-                    <a title="Vai para a página inicial" href="aula2.html">Página Inicial</a> | Podutos e Marcas | 
-                    <a title="Vai para a página de Fale Conosco"  href="faleconosco.html">Fale conosco
-                    </a> 
+                    <a title="Vai para a página inicial" href="paginainicial.html">Página Inicial</a>
+                    <a title="Vai para a página Produtos e Marcas" href="produtosemarcas.html"> | Podutos e Marcas |</a> 
+                    <a title="Vai para a página de Fale Conosco"  href="faleconosco.html">Fale conosco</a> 
 
                     <a class="btn_destaque" href="ondeestamos.html"> Onde estamos
                     </a>
