--- a/produtosemarcas.html
+++ b/produtosemarcas.html
@@ -22,9 +22,9 @@
                 <div class="logoe_nome"><img alt="Logo da Empresa" title="Logo da Empresa ABC" src="img/logo.png"/ width="80" height="80">Óticas Eli</div>
                 
                 <nav>
-                    <a title="Vai para a página incial" href="aula2.html"> Página Inicial</a> <a title="Vai para a página Produtos e marcas" href="produtosemarcas.html"> Podutos e Marcas |</a>
-                    <a title="Vai para a página de Fale Conosco"  href="faleconosco.html">Fale conosco
-                    </a> 
+                    <a title="Vai para a página incial" href="paginainicial.html"> Página Inicial</a>
+                    <a title="Vai para a página Produtos e marcas" href="produtosemarcas.html">| Podutos e Marcas |</a>
+                    <a title="Vai para a página de Fale Conosco"  href="faleconosco.html">Fale conosco</a> 
 
                     <a class="btn_destaque" href="ondeestamos.html">Onde estamos
                     </a>
