Adcionar links nos rodapés

--- a/termosdeuso.html
+++ b/termosdeuso.html
@@ -23,7 +23,7 @@
                 
                 <nav>
                     <a title="Vai para a página incial" href="paginainicial.html"> Página Inicial</a>
-                    <a title="Vai para a página Produtos e Marcas">| Podutos e Marcas |</a> 
+                    <a title="Vai para a página Produtos e Marcas" href="produtosemarcas.html">| Podutos e Marcas |</a> 
                     <a title="Vai para a página de Fale Conosco"  href="faleconosco.html">Fale conosco
                     </a> 
 
@@ -118,10 +118,10 @@
                 <b>Links</b>
                 <br>
                 <br>
-                <a href="#">Início</a><br>
-                <a href="#">Produtos e marcas</a><br>
-                <a href="#">Fale conosco</a><br>
-                <a href="#">Onde estamos</a>
+                <a title="Vai para a página inicial" href="paginainicial.html">Início</a><br>
+                <a title="Vai para a página Produtos e Marcas" href="produtosemarcas.html">Produtos e marcas</a><br>
+                <a title="Vai para a página Fale conosco" href="faleconosco.html">Fale conosco</a><br>
+                <a title="Vai para a página Onde estamos" href="ondeestamos.html">Onde estamos</a>
             </div>
             
             <div class="footer_informacoes">
