--- a/paginainicial.html
+++ b/paginainicial.html
@@ -114,10 +114,10 @@
                 <b>Links</b>
                 <br>
                 <br>
-                <a href="#">Início</a><br>
-                <a href="#">Produtos e marcas</a><br>
-                <a href="#">Fale conosco</a><br>
-                <a href="#">Onde estamos</a>
+                <a title="Vai para a página inicial" href="paginainicial.html">Início</a><br>
+                <a title="Vai para a página Produtos e Marcas" href="produtosemarcas.html">Produtos e marcas</a><br>
+                <a title="Vai para a página Fale conosco" href="faleconosco.html">Fale conosco</a><br>
+                <a title="Vai para a página Onde estamos" href="ondeestamos.html">Onde estamos</a>
             </div>
             
             <div class="footer_informacoes">
@@ -141,23 +141,4 @@
     </body>
 
 </html>
-<!--
-            <div>
-                <div>
-                    <a href="#">
-                        <img alt="Link para Facebook" title="Link para o facebook" src="img/facebook.jpg" width="50"/> 
-                    </a>
-                    <a href="#">
-                        <img alt="Link para Twiter" src="img/twitter.jpg" width="50"/>
-                    </a>
-                    <a href="#">
-                        <img alt="Link para Instagram" src="img/Instragram.jpg" width="50"/> 
-                    </a>
-                </div>
-                <div>
-                    Contato:
-                    Rua X, numero tal - Parque novo mundo - SP - 02179-000 
-                    <br>Telefone: <a href="tel:11997473010">(11) 99747-3010</a>
-                    <br>Email: <a href="mailto:prof.edson.oliveira@hotmail.com">prof.edson.oliveira@hotmail.com</a>
-                </div>
-            </div>
+
