--- a/politicadeprivacidade.html
+++ b/politicadeprivacidade.html
@@ -22,7 +22,8 @@
                 <div class="logoe_nome"><img alt="Logo da Empresa" title="Logo da Empresa ABC" src="img/logo.png"/ width="80" height="80">Óticas Eli</div>
                 
                 <nav>
-                    <a title="Vai para a página incial" href="aula2.html"> Página Inicial</a> | Podutos e Marcas | 
+                    <a title="Vai para a página incial" href="aula2.html"> Página Inicial</a> 
+                    <a title="Vai para a página Produtos e Marcas" href="produtosemarcas.html">| Podutos e Marcas |</a> 
                     <a title="Vai para a página de Fale Conosco"  href="faleconosco.html">Fale conosco
                     </a> 
 
@@ -97,10 +98,10 @@
                 <b>Links</b>
                 <br>
                 <br>
-                <a href="#">Início</a><br>
-                <a href="#">Produtos e marcas</a><br>
-                <a href="#">Fale conosco</a><br>
-                <a href="#">Onde estamos</a>
+                <a title="Vai para a página inicial" href="paginainicial.html">Início</a><br>
+                <a title="Vai para a página Produtos e Marcas" href="produtosemarcas.html">Produtos e marcas</a><br>
+                <a title="Vai para a página Fale conosco" href="faleconosco.html">Fale conosco</a><br>
+                <a title="Vai para a página Onde estamos" href="ondeestamos.html">Onde estamos</a>
             </div>
             
             <div class="footer_informacoes">
