[ADD]Página: Termos de Uso e Politica de Privacidade. Adicionar botao que redireciona para a página inicial

--- a/politicadeprivacidade.html
+++ b/politicadeprivacidade.html
@@ -53,6 +53,7 @@
             <br>
             <p>Esta política é efetiva a partir de <strong>June</strong>/<strong>2020</strong>.</p>
             <br>
+            <a title="Ir para a página inicial" href="paginainicial.html"><button>PÁGINA INICIAL</button></a>
             <br>
             <br>
         </section>
