--- a/termosdeuso.html
+++ b/termosdeuso.html
@@ -71,7 +71,7 @@
             <br>
             <p>Estes termos e condições são regidos e interpretados de acordo com as leis do OticasEli e você se submete irrevogavelmente à jurisdição exclusiva dos tribunais naquele estado ou localidade.</p>
             <br>
-            <br>
+            <a title="Ir para a página inicial" href="paginainicial.html"><button>PÁGINA INICIAL</button></a>
             <br>
             <br>
             
