Adicionar fontes ao cabeçalho das paginas Politica de Privacidade e Termos de Uso

--- a/politicadeprivacidade.html
+++ b/politicadeprivacidade.html
@@ -22,7 +22,7 @@
                 <div class="logoe_nome"><img alt="Logo da Empresa" title="Logo da Empresa ABC" src="img/logo.png"/ width="80" height="80">Óticas Eli</div>
                 
                 <nav>
-                    <a title="Vai para a página incial" href="aula2.html"> Página Inicial</a> 
+                    <a title="Vai para a página incial" href="paginainicial.html"> Página Inicial</a> 
                     <a title="Vai para a página Produtos e Marcas" href="produtosemarcas.html">| Podutos e Marcas |</a> 
                     <a title="Vai para a página de Fale Conosco"  href="faleconosco.html">Fale conosco
                     </a> 
