Adicionar na pagina inicial link que redireciona para a pagina produtos e marcas

--- a/paginainicial.html
+++ b/paginainicial.html
@@ -76,7 +76,7 @@
             
             <figcaption class="GrandeVariedadeTexto">
                 <p>Grande<br> variedade<br>de armações</p>
-                <a class="btn_venha_conferir" href="produtos_marcas.html"> Venha conferir
+                <a class="btn_venha_conferir" href="produtosemarcas.html"> Venha conferir
                 </a>
             </figcaption>
             </figure>
